--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ a:hover{
 
 .hero-container {
     height: 800px;
-    background-image: url("../img/hero-bg.svg");
+    background-image:url('./images/hero-bg.svg');
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
